views/refbook.scss
// Refbook CSS

$footer-height: 36px;
$slide-left: 30px;
@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext");
@import url("http://fonts.googleapis.com/css?family=Exo+2:400,700&subset=latin,latin-ext");

// colors
$orange: #ff6600; //orange
$red: red;
$cyan: cyan;
// $cyan: #00ff00; //lime green
$gray: #767676; //gray
// $links: #000066;
// $links: #ff8000;
$links: #000;

* {
    font-family: 'Open Sans', Verdana;
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-size: 18px;
    // background-image: url("../images/satinweave.png"); 
    
    

    a {
        color: $gray;
        &:hover {
            color: $links;
            // text-decoration: none;
        }
    }

    ul {
        list-style-type: none;
        margin: 0;
    }

    hr {
        border: 0;
        height: 1px;
        background: #333;
        margin-left: 0;
        width: 80%;
        background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc); 
        background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc); 
        background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc); 
        background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);
    }

    .error {
        width: 63%;
        margin: 0 auto;
        padding-bottom: 50px;
        h1, h2 {
            text-align: center; 
            padding-top: 60px;
        }
        .left {
            float: left;
        }
        .right {
            float: right;
            padding-right: 20px;
        }
    }

    .issue {
        color: $red;
    }

    // span.ex {
        // color: red; 
        // font-weight: bold;
    // }

    .danger {
        color: red;
    }

    .warning {
        color: yellow;
    }

    .go {
        color: blue;
    }

    .ok {
        color: green;
    }

    .hang {
        margin-left: -30px;
    }

    .unstarred {
        color: white;
    }

    .starred {
        color: cyan;
    }
}

.content {
    min-height: 100%;
    position: relative;
}

.top {
    // the big black bar
    // padding: 10px;
    .topbar {
        height: 48px;
        color: #fff;
        background-color: #000;
        clear: both;
        // margin-left: -30px;
        a {
            color: #fff;
            // color: green;
        }

        .no-kids {
            border-bottom: 1px solid #fff;
            &:hover {
                border-bottom: 1px solid #000;
            }
        }

        .kids {
            border-bottom: 1px solid $cyan;
            &:hover {
                & > a {
                    // color: $cyan;
                    
                    // border-bottom: 1px solid #fff;
                }
           }
        }

        .active {
            border-bottom: 1px solid #000; 
            // color: $cyan;
        }

        .kids.active {
            border-bottom: 1px dashed $cyan;
        }

        ul {
            padding-top: 6px;
            margin-left: -1.5em;
            li {
                display: inline-block;
            }
            .right {
                float: right;
                margin-right: 10px;
                padding: 5px;
            }
            .icon {
                padding: 0;
                border-bottom: 1px solid #fff; 
                &:hover {
                    border-bottom: 1px solid #000;
                }
            }
        }

        // dropdown code adapted from: http://code-tricks.com/simple-css-drop-down-menu/
        #menu {
            a {
                text-decoration: none;
                padding: 5px;
                display: inline-block;
            }            

            li {
                position: relative;
                background-color: #000;
                &:hover {
                    .sub-menu {
                        display: block;
                    }
                }
            }

            .sub-menu {
                padding: 0;
                // padding-top: 5px;
                margin: 0;
                display: none;
                position: absolute;
                top: 30px;
                left: 0;
                // width: 100px;
                width: 100%;
                a {
                    // padding: 5px;
                    &:hover {
                        color: $cyan;
                    }
                }
                li {
                    width: inherit;
                }
            }
        }

        
    }
    // login/logout text
    .header {
        float: right;
        padding-right: 20px;
        text-align: right;
        width: 200px;
        a {
            color: $gray;
            &:hover {
                color: $links;
            }
        }
    }
}

.mid {
    padding-bottom: $footer-height+30;
    padding-left: $slide-left;

    ::selection {
        color: #fff;
        background: #000;
    }
    
    ::-moz-selection {
        color: #fff;
        background: #000;
    }

    h1 {
        font-family: Georgia, serif;
        font-size: 48px;
        margin-top: .3em;
        margin-bottom: .3em;
    }

    // a {
    //     color: $gray;
    //     &:hover {
    //         color: $links;
    //     }
    // }

    p {
        width: 60%;
        padding-left: 30px;
        li {
            width: 60%;
        }
    }

    .right {
        float: right;
    }



    .form_box {
        padding-left: 30px;
        padding-right: 30px;
        // thought I might like these, I don't. 
        // border-left: 1px solid black;
        // border-right: 1px solid black;
        width: 250px;
        // clear: both;

        input {
            width: 100%;
            clear: both;
            margin-bottom: 20px;
            border-radius: 0px;
            &:focus {
                border: 2px solid #000;
                box-shadow: none;
                -moz-box-shadow: none;
                -webkit-box-shadow: none;
                outline: none;
            }
        }

        select {
            width: 100%;
            clear: both;
            margin-bottom: 20px;
            &:focus {
                border: 2px solid #000;
                box-shadow: none;
                -moz-box-shadow: none;
                -webkit-box-shadow: none;
                outline: none;
            }
        }
    }

    .small {
        width: 200px;
    }

    .big {
        width: 650px;
    }

    .paypal {
        padding-left: 27%;
        padding-top: 15px;

    }

    .name {
        color: $red;
        text-decoration: underline;
    }

    .rating {
        text-decoration: underline;
    }

    .regions {
        padding-left: 0;
        padding-bottom: 15px;
        color: darkgray;
        // a:hover {
            // text-decoration: none;
            // color: darkgray;
        // }
        li {
            display: inline;
        }
    }

    .mode {
        color: black;
        font-weight: bold;
        text-decoration: none;
    }

    .active {
        color: #000;
        text-decoration: none;
        font-weight: bold;
    }

    .table-background {
        background-color: darkgray;
        thead {
            td {
                font-weight: bold;
            }
        }
        td {
            padding: 8px;
            background-color: white;
        }
    }

    .table-box {
        width: 85%;
    }

    #theTable {
        td {
            vertical-align: inherit;
        }
        thead {
            // border-bottom: 1px solid #000;
            background: black;
            color: white;
        }
        tbody {
            // .odd {
            //     // background: #bcbcbc;
            //     background: #cdcdcd;
            // }
            // .even {
            //     // background: #808080;
            // }
            tr {
                background: #cdcdcd;
            }
            .ref-name {
                // go $links, baby
                background-color: #676767;
                color: #fff;
            }
            .mine {
                background-color: #00274c;
                color: #ffcb05;
            }
            // .y {
            //     background-color: #50e000;
            // }
            // .n {
            //     background-color: #ff2100;
            // }
        }
    }

    .skinny {
        width: 60%;
    }

  #world-map {
        width: 80%;
        height: 550px;
    }

    .key {
        height: 25px;
        width: 25px;
    }

    #established {
        background-color: #9FC5E8;
    }

    #developing {
        background-color: #FF9900;
    }

    .line {
        padding-bottom: 20px;

        li {
            display: inline-block;
            vertical-align: top;
        }
    }

    .mini {
        width: 15%;
        margin-left: 60px;
    }

    #prof_pic {
        float: right;
        margin-right: 120px;
        border: 1px solid #000;
    }

    .bullets {
        list-style-type: disc;
        padding-left: 80px;
    }

    .required:after {
        content: "*";
        color: red;
    }
}


.bot {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: $footer-height;
    background: #000;
    color: #fff;

    p {
        padding-left: 10px; 
        font-size: 12px;
        margin-top: 10px;
    }

    a {
        color: #fff;
        &:visited {
            color: #fff;
        }
        &:hover{
            text-decoration: none;
            color: #fff;
        }
    }

    i {
        padding-right: 8px;
    }

}

